# Notes-CLI-Tool

./: .gitignore  README.md  notes_export_20260406.md  pyproject.toml  setup.py  test_cli.py
.github/workflows/: release.yml  tests.yml
notes/: __init__.py  cli.py  db.py
notes/commands/: core.py  data.py  future.py  insights.py  organize.py
notes/utils/: formatting.py  text.py
notes_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
